tests/fail/GreaterThanOrEqual.java
public class GreaterThanOrEqual {
	
	public static void main ( String [] args ) {
		System.out.println('a' >= 42);
	}
}
